--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,27 +1,28 @@
-name: Ежедневный запуск скрипта main.py
+name: Daily Automation
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Запуск каждый день в 00:00 UTC
-  workflow_dispatch:       # Добавляет возможность ручного запуска
+    - cron: '0 0 * * *' # Запуск каждый день в 00:00 UTC
+  workflow_dispatch: # Ручной запуск через GitHub
 
 jobs:
-  run-script:
+  run-main:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Проверка кода
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Установка Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'  # Укажите вашу версию Python
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
 
-      - name: Установка зависимостей
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          
-      - name: Запуск скрипта
-        run: python /home/runner/work/b2_autonomous_system/b2_autonomous_system/core/scripts/main.py
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Run Main Script
+      run: |
+        python core/scripts/main.py
