--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,90 @@
-awscli 
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.10
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.7.0
+attrs==24.2.0
+awscli==1.36.36
+blis==1.1.0
+boto3==1.35.76
+botocore==1.35.95
+catalogue==2.0.10
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+cloudpathlib==0.20.0
+colorama==0.4.6
+confection==0.1.5
+coverage==7.6.10
+cymem==2.0.10
+DAWG-Python==0.7.2
+distro==1.9.0
+docutils==0.16
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+frozenlist==1.5.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+iniconfig==2.0.0
+Jinja2==3.1.5
+jiter==0.8.0
+jmespath==1.0.1
+joblib==1.4.2
+langcodes==3.5.0
+language_data==1.3.0
+language_tool_python==2.8.1
+marisa-trie==1.2.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+multidict==6.1.0
+murmurhash==1.0.11
+nltk==3.9.1
+numpy==2.2.1
+openai==0.28.0
+packaging==24.2
+pluggy==1.5.0
+preshed==3.0.9
+propcache==0.2.1
+pyasn1==0.6.1
+pydantic==2.10.3
+pydantic_core==2.27.1
+Pygments==2.19.0
+pymorphy3==2.0.2
+pymorphy3-dicts-ru==2.4.417150.4580142
+pyphen==0.17.0
+pytest==8.3.4
+pytest-cov==6.0.0
+pytest-mock==3.14.0
+python-dateutil==2.9.0.post0
+PyYAML==6.0.2
+readability==0.3.1
+regex==2024.11.6
+requests==2.32.3
+rich==13.9.4
+rsa==4.7.2
+ru_core_news_md @ https://github.com/explosion/spacy-models/releases/download/ru_core_news_md-3.8.0/ru_core_news_md-3.8.0-py3-none-any.whl#sha256=43f456d40e4b70726874e01ce01fce32f50089ba98a2660292e9a6c63a06ebe9
+runwayml==2.1.4
+s3transfer==0.10.4
+setuptools==75.6.0
+shellingham==1.5.4
+six==1.17.0
+smart-open==7.1.0
+sniffio==1.3.1
+spacy==3.8.3
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.0
+textblob==0.18.0.post0
+textstat==0.7.4
+thinc==8.3.3
+tqdm==4.67.1
+typer==0.15.1
+typing_extensions==4.12.2
+urllib3==2.2.3
+wasabi==1.1.3
+weasel==0.4.1
+wheel==0.45.1
+wrapt==1.17.0
+yarl==1.18.3
