--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -23,10 +23,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Add PYTHONPATH
+    - name: Set PYTHONPATH
       run: echo "PYTHONPATH=$(pwd)/core" >> $GITHUB_ENV
 
     - name: Run Main Script
       run: python scripts/main.py
       env:
         PYTHONPATH: ${{ github.workspace }}/core
+
