--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -24,9 +24,7 @@ jobs:
         pip install -r requirements.txt
 
     - name: Set PYTHONPATH
-      run: |
-        echo "PYTHONPATH=$(pwd)/core" >> $GITHUB_ENV
-        echo "PYTHONPATH set to: $(pwd)/core"
+      run: echo "PYTHONPATH=$(pwd)" >> $GITHUB_ENV
 
     - name: Debug PYTHONPATH
       run: echo $PYTHONPATH
@@ -34,4 +32,4 @@ jobs:
     - name: Run Main Script
       run: python scripts/main.py
       env:
-        PYTHONPATH: ${{ github.workspace }}/core
+        PYTHONPATH: ${{ github.workspace }}
