--- a/config/config.json
+++ b/config/config.json
@@ -22,25 +22,25 @@
        }
     },
     "FILE_PATHS": {
-        "meta_folder": "core/meta/",
+        "meta_folder": "data/meta/",
         "focus_tracker": "data/focus_tracker.json",
-        "archive_folder": "core/archive/",
-        "folder_444": "core/444/",
-        "folder_555": "core/555/",
-        "folder_666": "core/666/",
+        "archive_folder": "archive/",
+        "folder_444": "444/",
+        "folder_555": "555/",
+        "folder_666": "666/",
         "log_folder": "logs/",
-        "backup_folder": "backup/",
-        "content_output_path": "core/generated_content.json",
-        "final_content_path": "core/final_content.json",
-        "feedback_file": "core/data/feedback.json",
-        "feedback_report": "core/feedback_report.json",
+        "backup_folder": "data/backup/",
+        "content_output_path": "generated_content.json",
+        "final_content_path": "final_content.json",
+        "feedback_file": "data/feedback.json",
+        "feedback_report": "feedback_report.json",
         "dynamic_config": "config/config_dynamic.json",
         "archive_config": "config/config_archive.json",
         "core_config": "config/config_core.json",
-        "default_image_path": "core/media/input_image.jpg",
-        "default_video_path": "core/media/output_video.mp4",
-        "before_critique_path": "core/before_critique.json",
-        "after_critique_path": "core/after_critique.json"
+        "default_image_path": "media/input_image.jpg",
+        "default_video_path": "media/output_video.mp4",
+        "before_critique_path": "before_critique.json",
+        "after_critique_path": "after_critique.json"
     },
     "OTHER": {
         "file_extensions": [
