--- a/config/config.json
+++ b/config/config.json
@@ -23,14 +23,14 @@
     },
     "FILE_PATHS": {
         "meta_folder": "data/meta/",
-        "focus_tracker": "data/focus_tracker.json",
+        "focus_tracker": "core/data/focus_tracker.json",
         "archive_folder": "archive/",
         "folder_444": "444/",
         "folder_555": "555/",
         "folder_666": "666/",
         "log_folder": "logs/",
         "backup_folder": "data/backup/",
-        "content_output_path": "generated_content.json",
+        "content_output_path": "core/generated_content.json",
         "final_content_path": "final_content.json",
         "feedback_file": "data/feedback.json",
         "feedback_report": "feedback_report.json",
