--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -57,3 +57,6 @@ jobs:
       run: python scripts/main.py
       env:
         PYTHONPATH: ${{ github.workspace }}
+      # В конце файла добавьте
+       #
+
