--- a/config/config.json
+++ b/config/config.json
@@ -23,6 +23,8 @@
     },
     "FILE_PATHS": {
         "meta_folder": "data/meta/",
+        "scripts_folder": "core/scripts",
+        "config_public": "config/config_public.json",
         "focus_tracker": "core/data/focus_tracker.json",
         "archive_folder": "data/archive/",
         "folder_444": "444/",
