Исправлена загрузка артефактов: файлы теперь загружаются без архива

--- a/config/config.json
+++ b/config/config.json
@@ -123,7 +123,7 @@
             "Интерактивность",
             "Юмор"
         ],
-        "prompt_template": "Ты опытный писатель и историк. Напиши захватывающий и познавательный текст для Telegram-канала на тему: '{topic}'. Длина текста: до 500 символов. Структура: Вступление (зацепи читателя), Основная часть (конкретные факты, детали), Интересный факт (яркая деталь), Заключение (краткий вывод). Стиль: уважительный, эмоциональный, с глубоким пониманием темы. Убедись, что текст легко читается (индекс читабельности выше 73)."
+        "prompt_template": "Ты опытный писатель и историк. Напиши захватывающий и познавательный текст для Telegram-канала на тему: '{topic}'. Структура: Вступление (зацепи читателя), Основная часть (конкретные факты, детали), Интересный факт (яркая деталь), Заключение (краткий вывод). Стиль: уважительный, эмоциональный, с глубоким пониманием темы. Убедись, что текст легко читается (индекс читабельности выше 73)."
     },
     "critique": {
         "prompt_template": "Ты профессиональный редактор и историк. Твоя задача — провести анализ следующего текста:\n\n{content}\n\n📚 **Требования к критике:**\n1. Оцени читабельность и плавность повествования.\n2. Укажи, если в тексте есть логические ошибки.\n3. Проверь, насколько текст соответствует заявленной теме.\n4. Укажи, если информация требует уточнений.\n5. Предложи улучшения для заключения.\n\n⚙️ Формат ответа:\n- Сильные стороны текста.\n- Слабые стороны текста.\n- Рекомендации по улучшению.",
