--- a/config/config.json
+++ b/config/config.json
@@ -40,6 +40,7 @@
         "default_image_path": "media/input_image.jpg",
         "default_video_path": "media/output_video.mp4",
         "before_critique_path": "before_critique.json",
+        "topics_tracker": "data/topics_tracker.json",
         "after_critique_path": "after_critique.json"
     },
     "OTHER": {
@@ -105,7 +106,9 @@
             "История в искусстве", 
             "Экономические кризисы и взлеты"
         ],
-        "prompt_template": "Ты профессиональный историк и копирайтер с глубокими знаниями. Ваша задача — создать уникальную, эмоционально цепляющую и интригующую тему для исторического Telegram-канала. Сфокусируйтесь на одной из следующих тем: {focus_areas}. \n\n📌 **Требования:**\n- Краткость: до 12 слов.\n- Стиль: уважительный, академичный, но доступный широкой аудитории.\n- Эмоциональный акцент: захвати внимание читателя с первых слов.\n- Уникальность: избегай общих фраз и шаблонов.\n\n🎯 Пример идеальной темы: 'Как Пётр I спас Россию от разорения за одну ночь'."
+        "prompt_template": "Ты профессиональный историк и копирайтер с глубокими знаниями. Ваша задача — создать уникальную, эмоционально цепляющую и интригующую тему для исторического Telegram-канала. Сфокусируйтесь на одной из следующих тем: {focus_areas}. \n\n📌 **Требования:**\n- Краткость: до 12 слов.\n- Стиль: уважительный, академичный, но доступный широкой аудитории.\n- Эмоциональный акцент: захвати внимание читателя с первых слов.\n- Уникальность: избегай общих фраз и шаблонов.\n\n🎯 Пример идеальной темы: 'Как Пётр I спас Россию от разорения за одну ночь'.",
+        "prompt_template_with_short": "Ты профессиональный историк и копирайтер. Твоя задача — создать уникальную, эмоционально цепляющую и интригующую тему для исторического Telegram-канала, используя один из следующих фокусов: {focus_areas}.\nТема должна состоять не более чем из 12 слов. Эмоциональный акцент: захвати внимание читателя с первых слов. Уникальность: избегай общих фраз и шаблонов. Пример идеальной темы: 'Как Пётр I спас Россию от разорения за одну ночь'. После этого придумай краткий ярлык (не более чем из 2 слов), который суммирует суть темы. Не используй следующие ярлыки:\n- {exclusions}\n\nВыведи результат в формате JSON с ключами \"full_topic\" и \"short_topic\"."
+}
     },
     "text": {
         "max_length": 2000,
