--- a/config/config.json
+++ b/config/config.json
@@ -16,7 +16,7 @@
             "duration": 5,
             "ratio": "1280:768",
             "default_scenario": "Закат на побережье с парусными кораблями."
-       }
+        }
     },
     "FILE_PATHS": {
         "meta_folder": "data/meta/",
@@ -76,67 +76,66 @@
         }
     },
     "CONTENT": {
-    "topic": {
-        "max_length": 200,
-        "max_words": 12,
-        "focus_areas": [
-            "Исторические факты", 
-            "Исторические личности", 
-            "Знаковые битвы", 
-            "Трагедии человечества", 
-            "Доисторические события", 
-            "Древние цивилизации", 
-            "Необычные открытия", 
-            "Артефакты и реликвии", 
-            "Конспирологические теории", 
-            "Загадки истории", 
-            "Исторические курьезы", 
-            "Великие изобретения", 
-            "Культурные феномены", 
-            "Исторические карты", 
-            "История через цитаты", 
-            "Династии и монархи", 
-            "Важные документы истории", 
-            "Мифы и легенды", 
-            "Исторические праздники", 
-            "Великие путешественники", 
-            "История медицины", 
-            "Религии и верования", 
-            "Архитектурные чудеса", 
-            "История в искусстве", 
-            "Экономические кризисы и взлеты"
-        ],
-        "prompt_template": "Ты профессиональный историк и копирайтер с глубокими знаниями. Ваша задача — создать уникальную, эмоционально цепляющую и интригующую тему для исторического Telegram-канала. Сфокусируйтесь на одной из следующих тем: {focus_areas}. \n\n📌 **Требования:**\n- Краткость: до 12 слов.\n- Стиль: уважительный, академичный, но доступный широкой аудитории.\n- Эмоциональный акцент: захвати внимание читателя с первых слов.\n- Уникальность: избегай общих фраз и шаблонов.\n\n🎯 Пример идеальной темы: 'Как Пётр I спас Россию от разорения за одну ночь'.",
-        "prompt_template_with_short": "Ты профессиональный историк и копирайтер. Твоя задача — создать уникальную, эмоционально цепляющую и интригующую тему для исторического Telegram-канала, используя один из следующих фокусов: {focus_areas}.\nТема должна состоять не более чем из 12 слов. Эмоциональный акцент: захвати внимание читателя с первых слов. Уникальность: избегай общих фраз и шаблонов. Пример идеальной темы: 'Как Пётр I спас Россию от разорения за одну ночь'. После этого придумай краткий ярлык (не более чем из 2 слов), который суммирует суть темы. Не используй следующие ярлыки:\n- {exclusions}\n\nВыведи результат в формате JSON с ключами \"full_topic\" и \"short_topic\"."
-}
+        "topic": {
+            "max_length": 200,
+            "max_words": 12,
+            "focus_areas": [
+                "Исторические факты",
+                "Исторические личности",
+                "Знаковые битвы",
+                "Трагедии человечества",
+                "Доисторические события",
+                "Древние цивилизации",
+                "Необычные открытия",
+                "Артефакты и реликвии",
+                "Конспирологические теории",
+                "Загадки истории",
+                "Исторические курьезы",
+                "Великие изобретения",
+                "Культурные феномены",
+                "Исторические карты",
+                "История через цитаты",
+                "Династии и монархи",
+                "Важные документы истории",
+                "Мифы и легенды",
+                "Исторические праздники",
+                "Великие путешественники",
+                "История медицины",
+                "Религии и верования",
+                "Архитектурные чудеса",
+                "История в искусстве",
+                "Экономические кризисы и взлеты"
+            ],
+            "prompt_template": "Ты профессиональный историк и копирайтер с глубокими знаниями. Ваша задача — создать уникальную, эмоционально цепляющую и интригующую тему для исторического Telegram-канала. Сфокусируйтесь на одной из следующих тем: {focus_areas}. \n\n📌 **Требования:**\n- Краткость: до 12 слов.\n- Стиль: уважительный, академичный, но доступный широкой аудитории.\n- Эмоциональный акцент: захвати внимание читателя с первых слов.\n- Уникальность: избегай общих фраз и шаблонов.\n\n🎯 Пример идеальной темы: 'Как Пётр I спас Россию от разорения за одну ночь'.",
+            "prompt_template_with_short": "Ты профессиональный историк и копирайтер. Твоя задача — создать уникальную, эмоционально цепляющую и интригующую тему для исторического Telegram-канала, используя один из следующих фокусов: {focus_areas}.\nТема должна состоять не более чем из 12 слов. Эмоциональный акцент: захвати внимание читателя с первых слов. Уникальность: избегай общих фраз и шаблонов. Пример идеальной темы: 'Как Пётр I спас Россию от разорения за одну ночь'. После этого придумай краткий ярлык (не более чем из 2 слов), который суммирует суть темы. Не используй следующие ярлыки:\n- {exclusions}\n\nВыведи результат в формате JSON с ключами \"full_topic\" и \"short_topic\"."
+        },
+        "text": {
+            "max_length": 2000,
+            "flesch_threshold": 73,
+            "structure": [
+                "Вступление",
+                "Основная часть",
+                "Интересный факт",
+                "Юмористическая рубрика",
+                "Заключение"
+            ],
+            "focus": [
+                "Эмоциональный отклик",
+                "Историческая точность",
+                "Интерактивность",
+                "Юмор"
+            ],
+            "prompt_template": "Ты опытный писатель и историк. Напиши захватывающий и познавательный текст для Telegram-канала на тему: '{topic}'. Структура: Вступление (зацепи читателя), Основная часть (конкретные факты, детали), Интересный факт (яркая деталь), Заключение (краткий вывод). Стиль: уважительный, эмоциональный, с глубоким пониманием темы. Убедись, что текст легко читается (индекс читабельности выше 73)."
+        },
+        "critique": {
+            "prompt_template": "Ты профессиональный редактор и историк. Твоя задача — провести анализ следующего текста:\n\n{content}\n\n📚 **Требования к критике:**\n1. Оцени читабельность и плавность повествования.\n2. Укажи, если в тексте есть логические ошибки.\n3. Проверь, насколько текст соответствует заявленной теме.\n4. Укажи, если информация требует уточнений.\n5. Предложи улучшения для заключения.\n\n⚙️ Формат ответа:\n- Сильные стороны текста.\n- Слабые стороны текста.\n- Рекомендации по улучшению.",
+            "max_tokens": 300
+        },
+        "improve": {
+            "prompt_template": "Улучшите следующий текст с учётом этих рекомендаций:\n\n{critique}\n\n📊 **Дополнительные данные:**\n- Читабельность: {readability_results}\n- Семантический анализ: {semantic_results}\n\n**Текст:**\n{content}\n\n🎯 Важно: Сохраняйте основной фокус на теме. Не отклоняйтесь от основной идеи текста.",
+            "max_tokens": 400
+        }
     },
-    "text": {
-        "max_length": 2000,
-        "flesch_threshold": 73,
-        "structure": [
-            "Вступление",
-            "Основная часть",
-            "Интересный факт",
-            "Юмористическая рубрика",
-            "Заключение"
-        ],
-        "focus": [
-            "Эмоциональный отклик",
-            "Историческая точность",
-            "Интерактивность",
-            "Юмор"
-        ],
-        "prompt_template": "Ты опытный писатель и историк. Напиши захватывающий и познавательный текст для Telegram-канала на тему: '{topic}'. Структура: Вступление (зацепи читателя), Основная часть (конкретные факты, детали), Интересный факт (яркая деталь), Заключение (краткий вывод). Стиль: уважительный, эмоциональный, с глубоким пониманием темы. Убедись, что текст легко читается (индекс читабельности выше 73)."
-    },
-    "critique": {
-        "prompt_template": "Ты профессиональный редактор и историк. Твоя задача — провести анализ следующего текста:\n\n{content}\n\n📚 **Требования к критике:**\n1. Оцени читабельность и плавность повествования.\n2. Укажи, если в тексте есть логические ошибки.\n3. Проверь, насколько текст соответствует заявленной теме.\n4. Укажи, если информация требует уточнений.\n5. Предложи улучшения для заключения.\n\n⚙️ Формат ответа:\n- Сильные стороны текста.\n- Слабые стороны текста.\n- Рекомендации по улучшению.",
-        "max_tokens": 300
-    },
-    "improve": {
-        "prompt_template": "Улучшите следующий текст с учётом этих рекомендаций:\n\n{critique}\n\n📊 **Дополнительные данные:**\n- Читабельность: {readability_results}\n- Семантический анализ: {semantic_results}\n\n**Текст:**\n{content}\n\n🎯 Важно: Сохраняйте основной фокус на теме. Не отклоняйтесь от основной идеи текста.",
-        "max_tokens": 400
-    }
-},
     "SARCASM": {
         "enabled": true,
         "max_tokens_comment": 150,
@@ -173,29 +172,26 @@
         "max_workers": 5,
         "self_tuning_interval": "daily"
     },
-    
     "PROMPTS": {},
-
     "GENERATE": {
-    "topic_threshold": 7,
-    "text_threshold": 8,
-    "max_attempts": 3,
-    "adaptation_enabled": true,
-    "adaptation_parameters": {
-        "emotional_focus": 0.7,
-        "historical_detail": 0.8,
-        "humor_ratio": 0.5}
+        "topic_threshold": 7,
+        "text_threshold": 8,
+        "max_attempts": 3,
+        "adaptation_enabled": true,
+        "adaptation_parameters": {
+            "emotional_focus": 0.7,
+            "historical_detail": 0.8,
+            "humor_ratio": 0.5
+        }
     },
     "EXTERNAL_TOOLS": {
         "readability": {
             "enabled": true
-    },
+        },
         "semantic_analysis": {
-        "enabled": true,
-        "tool": "spacy",
-        "model": "ru_core_news_md"
+            "enabled": true,
+            "tool": "spacy",
+            "model": "ru_core_news_md"
+        }
     }
-    }
-
 }
-
