--- a/config/config.json
+++ b/config/config.json
@@ -46,9 +46,12 @@
         "after_critique_path": "after_critique.json"
     },
     "MEDIA": {
-    "video_scenario_prompt": "Ты профессиональный сценарист и режиссер коротких видеороликов, специализирующийся на создании по-настоящему гениальных и эффектных роликов. На основе предоставленного текста (либо его ключевых моментов) поста создай детальный сценарий для 10-секундного видео, разбитого на временные сегменты (например, 0-2 сек, 2-4 сек, 4-6 сек, 6-8 сек, 8-10 сек). Обязательно опиши следующие элементы:\n- Ключевые визуальные образы и символику, отражающие основную идею поста.\n- Специальные эффекты (например, световые эффекты, фильтры, переходы).\n- Движение камеры (панорамирование, зум, следящие кадры) для усиления динамики ролика.\n- Элементы композиции, которые подчеркнут атмосферу и эмоциональное содержание.\nЗатем сформируй краткий и ёмкий промпт для генерации изображения первого кадра ролика с помощью DALL‑E 3, указав основные визуальные характеристики, стиль и атмосферу кадра.\nВыведи ответ строго в формате JSON с двумя ключами: \"video_scenario\" для сценария видеоролика и \"first_frame_prompt\" для промпта изображения, без дополнительных комментариев или пояснений.",
+    "video_scenario_prompt": "Ты профессиональный сценарист и режиссер коротких видеороликов, специализирующийся на создании по-настоящему гениальных и эффектных роликов. На основе предоставленного текста {text} создай детальный сценарий для 10-секундного видео, разбитого на временные сегменты (например, 0-2 сек, 2-4 сек, 4-6 сек, 6-8 сек, 8-10 сек). Обязательно опиши следующие элементы:\n- Ключевые визуальные образы и символику, отражающие основную идею поста.\n- Специальные эффекты (например, световые эффекты, фильтры, переходы).\n- Движение камеры (панорамирование, зум, следящие кадры) для усиления динамики ролика.\n- Элементы композиции, которые подчеркнут атмосферу и эмоциональное содержание. не используй в тексте двойные кавычки, косой слэш",
     "video_max_tokens": 300,
+    "first_frame_prompt_template": "На основе следующего видео-сценария создай краткое и ёмкое описание для первого кадра ролика:\n\n{text}\n\nНе используй косой слэш и двойные кавычки."
     "video_temperature": 0.7,
+    "first_frame_max_tokens": 100,
+    "first_frame_temperature": 0.7,
     "image_size": "1024x768"
     },
     "OTHER": {
