--- a/.github/workflows/B2_Storage_Manager.yml
+++ b/.github/workflows/B2_Storage_Manager.yml
@@ -2,24 +2,13 @@ name: B2 Storage Manager Workflow
 
 on:
   schedule:
-    - cron: '10 13 * * *'
-  workflow_dispatch:
-    inputs:
-      stage:
-        description: 'Выберите этап для запуска'
-        required: true
-        default: 'all'
-        type: choice
-        options:
-          - all
-          - b2_storage_manager
-          - generate_content
-          - generate_media
+    - cron: '10 13 * * *'  # Ежедневно в 13:10 UTC
+  workflow_dispatch:  # Оставляем возможность ручного запуска без параметров
 
 jobs:
   run-b2-storage-manager:
     runs-on: ubuntu-latest
-    timeout-minutes: 30  # Оставляем ваш таймаут
+    timeout-minutes: 30
 
     steps:
     - name: Checkout code
@@ -33,7 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; else echo "requirements.txt not found"; exit 1; fi
 
     - name: Set environment variables
       run: |
@@ -48,10 +37,21 @@ jobs:
         echo "CONFIG_GEN_PATH=${{ secrets.CONFIG_GEN_PATH }}" >> $GITHUB_ENV
         echo "ARCHIVE_FOLDER=${{ secrets.ARCHIVE_FOLDER }}" >> $GITHUB_ENV
         echo "SCRIPTS_FOLDER=${{ secrets.SCRIPTS_FOLDER }}" >> $GITHUB_ENV
-        echo "RUNWAY_API_KEY=${{ secrets.RUNWAY_API_KEY }}" >> $GITHUB_ENV  # Оставляем ваш ключ
+        echo "RUNWAY_API_KEY=${{ secrets.RUNWAY_API_KEY }}" >> $GITHUB_ENV
+        echo "FILE_PATHS_LOG_FOLDER=${{ secrets.FILE_PATHS_LOG_FOLDER }}" >> $GITHUB_ENV
 
     - name: Set PYTHONPATH
       run: echo "PYTHONPATH=$(pwd)" >> $GITHUB_ENV
+
+    - name: Check required environment variables
+      run: |
+        required_vars="B2_BUCKET_NAME B2_ENDPOINT B2_ACCESS_KEY B2_SECRET_KEY"
+        for var in $required_vars; do
+          if [ -z "${!var}" ]; then
+            echo "Error: Required environment variable $var is not set."
+            exit 1
+          fi
+        done
 
     - name: Run B2 Storage Manager
       run: python scripts/b2_storage_manager.py
