--- a/config/config.json
+++ b/config/config.json
@@ -5,10 +5,11 @@
             "bucket_name": "boyarinnbotbucket"
         },
         "openai": {
-            "max_tokens_topic": 50,
-            "max_tokens_text": 750,
             "model": "gpt-4"
         }
+    },
+    "OPENAI_SETTINGS": {
+        "model": "gpt-4"
     },
     "FILE_PATHS": {
         "meta_folder": "data/meta/",
@@ -181,5 +182,15 @@
             "historical_detail": 0.8,
             "humor_ratio": 0.5
         }
+    },
+    "IMAGE_GENERATION": {
+        "image_size": "1792x1024",
+        "num_images": 1
+    },
+    "VISUAL_ANALYSIS": {
+        "min_script_length": 200
+    },
+    "PATHS": {
+        "output_image_format": "png"
     }
 }
