--- a/config/config.json
+++ b/config/config.json
@@ -161,6 +161,18 @@
             "max_length": 800,
             "prompt_template": "Ты гениальный историк и мастер сторителлинга, создающий посты для исторического Telegram-канала. Напиши текст на тему: '{topic}'. Длина: 80-100 слов, 2-3 абзаца. Следуй структуре:\n\n1. **Взрывной старт (1 предложение)**: Задай дерзкий вопрос (например, 'Выстояли бы вы под Брестом?') или брось шокирующий факт (например, 'В 1941 году Зоя погибла за правду').\n2. **Живой факт (1-2 предложения)**: Расскажи реальное событие Второй мировой войны с датой, местом или именем и яркой деталью (например, 'В 1941 году в Петрищево Зоя подожгла дома'), используй ТОЛЬКО проверенные факты, без вымысла.\n3. **Гениальный твист (1-2 предложения)**: Удиви реальным фактом с цифрой, именем или деталью (например, 'Её тело висело месяц перед врагом'), добавь лёгкую улыбку (например, 'а дух остался непобеждённым!'), только правда.\n4. **Крючок (1 предложение)**: Дай интригу о следующем посте без вопросов (например, 'Завтра — про подвиг в Бресте').\n\n**Стиль и тон**:\n- Дерзкий, живой, разговорный, с лёгким улыбчивым настроением.\n- Пиши как друг, без заумностей.\n- Эмодзи: ровно 3 (в старте, факте, твисте), крючок без эмодзи.\n\n**Цель**: Удивить, вызвать улыбку и желание переслать пост, сохраняя доверие к исторической правде. Используй ТОЛЬКО реальные факты Второй мировой войны, без выдуманных событий или деталей.",
             "temperature": 0.5
+        },
+        "critique": {
+            "enabled": false,
+            "prompt_template": "Ты профессиональный редактор и историк. Оцени текст для Telegram на тему '{topic}': {content}. Дай балл гениальности (1-10). Проверь:\n1. Связан ли текст с темой '{topic}'?\n2. Есть ли конкретная археологическая находка или факт?\n3. Для тем без трагедии: есть ли тонкий юмор? Для трагических тем: есть ли уважительная эмоциональность?\n4. Интригует ли финал?\n5. Читаем ли текст (абзацы, простота)?\nУкажи сильные и слабые стороны, что добавить для 'вау'. Формат:\n- Оценка: X/10\n- Связь с темой: да/нет\n- Находка/факт: да/нет\n- Юмор/эмоциональность: да/нет (уместно ли)\n- Интрига: да/нет\n- Читаемость: да/нет\n- Что улучшить: [список]",
+            "max_tokens": 300,
+            "temperature": 0.3
+        },
+        "improve": {
+            "enabled": false,
+            "prompt_template": "Ты гениальный писатель и историк. Улучши текст для Telegram на тему '{topic}': {content}, учитывая критику: {critique}. Следуй указаниям:\n1. Сохраняй связь с темой '{topic}'.\n2. Если критика просит, добавь конкретную находку или факт.\n3. Для тем без трагедии: добавь тонкий юмор в духе темы. Для трагических тем: усили эмоциональность (уважение, скорбь, восхищение).\n4. Усили интригу в финале.\n5. Сделай стиль простым, эмоциональным, с 2-3 абзацами.\n6. Заверши призывом 'подписывайтесь за новыми тайнами'.\nДлина 80-100 слов, никаких банальностей, только яркие образы и интрига.",
+            "max_tokens": 400,
+            "temperature": 0.7
         }
     },
     "SARCASM": {
