--- a/config/config.json
+++ b/config/config.json
@@ -148,6 +148,10 @@
                 "Исторические эпидемии и пандемии",
                 "История окружающей среды"
             ],
+            "exclusions": [
+                "Секреты прошлого",
+                "Мифы истории"
+            ],
             "prompt_template": "Ты профессиональный историк и копирайтер. Твоя задача — создать уникальную, эмоционально цепляющую и интригующую тему для исторического Telegram-канала, используя один из следующих фокусов: {focus_areas}. Тема должна состоять не более чем из 12 слов. Эмоциональный акцент: захвати внимание читателя с первых слов. Уникальность: избегай общих фраз и шаблонов. Пример идеальной темы: 'Как Екатерина II случайно изобрела русскую бюрократию'. После этого придумай краткий ярлык (не более чем из 2 слов), который суммирует суть темы. Темы со следующими ярлыками исключи из генерации: {exclusions}. Обязательно выведи результат строго в формате JSON с ключами \"full_topic\" и \"short_topic\"."
         },
         "text": {
