--- a/config/config.json
+++ b/config/config.json
@@ -115,53 +115,12 @@
         "topic": {
             "enabled": true,
             "max_length": 200,
-            "focus_areas": [
-                "Исторические факты",
-                "Исторические личности",
-                "Знаковые битвы",
-                "Трагедии человечества",
-                "Доисторические события",
-                "Древние цивилизации",
-                "Необычные открытия",
-                "Артефакты и реликвии",
-                "Конспирологические теории",
-                "Загадки истории",
-                "Исторические курьезы",
-                "Великие изобретения",
-                "Культурные феномены",
-                "Исторические карты",
-                "История через цитаты",
-                "Династии и монархи",
-                "Важные документы истории",
-                "Мифы и легенды",
-                "Исторические праздники",
-                "Великие путешественники",
-                "История медицины",
-                "Религии и верования",
-                "Архитектурные чудеса",
-                "История в искусстве",
-                "Экономические кризисы и взлеты",
-                "История технологий",
-                "Исторические конфликты и их разрешение",
-                "Женщины в истории",
-                "История науки",
-                "Исторические кулинарные традиции",
-                "История моды",
-                "Исторические спортивные события",
-                "История образования",
-                "Исторические эпидемии и пандемии",
-                "История окружающей среды"
-            ],
-            "exclusions": [
-                "Секреты прошлого",
-                "Мифы истории"
-            ],
-            "prompt_template": "Ты профессиональный историк и копирайтер. Твоя задача — создать уникальную, эмоционально цепляющую и интригующую тему для исторического Telegram-канала, используя один из следующих фокусов: {focus_areas}. Тема должна состоять не более чем из 12 слов. Эмоциональный акцент: захвати внимание читателя с первых слов. Уникальность: избегай общих фраз и шаблонов. Пример идеальной темы: 'Как Екатерина II случайно изобрела русскую бюрократию'. После этого придумай краткий ярлык (не более чем из 2 слов), который суммирует суть темы. Темы со следующими ярлыками исключи из генерации: {exclusions}. Обязательно выведи результат строго в формате JSON с ключами \"full_topic\" и \"short_topic\"."
+            "prompt_template": "Ты профессиональный историк и копирайтер. Твоя задача — создать уникальную, эмоционально цепляющую и интригующую тему для исторического Telegram-канала, используя фокус: {focus_areas}. Тема должна состоять не более чем из 12 слов. Эмоциональный акцент: захвати внимание читателя с первых слов. Уникальность: избегай общих фраз и шаблонов. Пример идеальной темы: 'Как Екатерина II случайно изобрела русскую бюрократию'. После этого придумай краткий ярлык (не более чем из 2 слов), который суммирует суть темы. Если указаны исключения, исключи темы с ярлыками: {exclusions}. Обязательно выведи результат строго в формате JSON с ключами \"full_topic\" и \"short_topic\"."
         },
         "text": {
             "enabled": true,
             "max_length": 800,
-            "prompt_template": "Ты опытный писатель и историк. Напиши захватывающий и познавательный текст для Telegram-канала на тему: '{topic}'. Структура: Вступление (зацепи читателя), Основная часть (конкретные факты, детали), Интересный факт (яркая деталь), Заключение (краткий вывод). Стиль: уважительный, эмоциональный, с глубоким пониманием темы. Убедись, что текст легко читается (индекс читабельности выше 73).",
+            "prompt_template": "Ты гениальный историк и мастер сторителлинга, создающий вирусные посты для российского исторического Telegram-канала. Напиши текст на тему: '{topic}'. Длина: 80-100 слов, 2-3 абзаца. Следуй структуре:\n\n1. **Взрывной старт (строго 1 предложение)**: Задай дерзкий вопрос (например, 'Рискнули бы вы вырвать сердце ради солнца?') или брось шокирующий факт (например, 'В 1812 году Наполеон потерял 30 тысяч за день').\n2. **Живой факт (1-2 предложения)**: Расскажи проверенное историческое событие с датой, местом или именем и яркой деталью (например, 'В 1519 году жрецы вырывали сердце обсидиановым ножом'), без вымысла, оживи образами.\n3. **Гениальный твист (1-2 предложения)**: Удиви реальным фактом, шокирующим или необычным, с неожиданной цифрой, именем или деталью (например, 'Ацтеки вырезали 20 тысяч сердец, включая детей!'), добавь лёгкую улыбку (например, 'и это ради солнца!'), только проверенные данные.\n4. **Личный крючок (строго 1 предложение)**: Дай интригу о следующем посте без вопросов (например, 'Завтра — про тайны Чингисхана').\n\n**Стиль и тон**:\n- Дерзкий, живой, разговорный, с лёгким улыбчивым настроением.\n- Пиши как друг, без заумностей.\n- Эмодзи: строго 3 (одно в старте, одно в факте, одно в твисте), крючок без эмодзи.\n\n**Цель**: Заставить читателя удивиться, слегка улыбнуться и переслать пост, вернувшись за добавкой, сохраняя доверие к исторической правде.",
             "temperature": 0.7
         },
         "tragic_text": {
@@ -235,7 +194,9 @@
             {"name": "Uniqueness", "weight": 1.3},
             {"name": "Cinematic quality", "weight": 1.5},
             {"name": "Prompt match", "weight": 1.2}
-    ]
+        ],
+        "image_selection_prompt": "Evaluate these 4 images for the prompt '{prompt}'. Score each from 0-10 on these criteria: {criteria}. Calculate the weighted total score for each image (score * weight). Return the image number (1-4) with the highest total score and a brief explanation.",
+        "image_selection_max_tokens": 500
     },
     "PATHS": {
         "output_image_format": "png"
