--- a/.github/workflows/run_main_script.yml
+++ b/.github/workflows/run_main_script.yml
@@ -11,15 +11,5 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; else echo "requirements.txt not found"; fi
-
-    - name: Run B2 Storage Manager
-      run: python -u scripts/b2_storage_manager.py
+    - name: Print test message
+      run: echo "Workflow успешно запущен"
