теория 100 проц начинаем отладку

--- a/.github/workflows/B2_Storage_Manager.yml
+++ b/.github/workflows/B2_Storage_Manager.yml
@@ -1,7 +1,7 @@
 name: B2 Storage Manager Workflow
 on:
   schedule:
-    - cron: '10 13 * * *'  # 13:10 UTC
+    - cron: '* * * * *'  # 13:10 UTC
   workflow_dispatch:      # Ручной запуск
 jobs:
   run-b2-storage-manager:
