--- a/.github/workflows/fetch_result.yml
+++ b/.github/workflows/fetch_result.yml
@@ -1,7 +1,7 @@
 name: Fetch MidJourney Result
 on:
   schedule:
-    - cron: "40,55,10 13 * * *" # 13:40, 13:55, 14:10 UTC
+    - cron: "* * * * *" # 13:40, 13:55, 14:10 UTC
   workflow_dispatch:            # Ручной запуск
 jobs:
   fetch-result:
